<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_topHeadlines"
        android:icon="@drawable/baseline_public_black_24dp"
        android:title="@string/title_topHeadlines" />
    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/baseline_list_alt_black_24dp"
        android:title="@string/title_categories" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/outline_search_black_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_saved"
        android:icon="@drawable/baseline_turned_in_black_24dp"
        android:title="@string/title_saved" />

    <item
        android:id="@+id/navigation_sources"
        android:icon="@drawable/baseline_source_black_24dp"
        android:title="@string/title_sources" />

</menu>