<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    android:id="@+id/scrollview_detail"
    tools:context="com.example.android.newsapi.activity.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/urlToImage"
            android:contentDescription="@string/urlToImage"
            app:srcCompat="@drawable/ic_gb"
            android:autoMirrored="true"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/title"
            android:textColor="#000080"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
            android:textColor="#000000"
            android:text="@string/description"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/favorite"
                android:contentDescription="@string/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                app:srcCompat="@drawable/baseline_turned_in_not_black_24dp"/>

            <ImageView
                android:id="@+id/action_share"
                android:contentDescription="@string/action_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/baseline_share_black_24dp"/>

            <ImageView
                android:id="@+id/action_open_in_browser"
                android:contentDescription="@string/action_open_in_browser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/baseline_open_in_browser_black_24dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="#000000"
            android:text="@string/author"/>

        <TextView
            android:id="@+id/publishedAt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textStyle="italic"
            android:textSize="14sp"
            android:textColor="#000000"
            android:text="@string/publishedAt"/>

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
            android:textColor="#000000"
            android:text="@string/content"/>

    </LinearLayout>

</ScrollView>