<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:tag="sources main container">

    <androidx.cardview.widget.CardView
        android:id="@+id/sources"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#FFFFFF"
        android:clickable="true"
        android:focusable="true"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="1dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/name"
                android:textColor="#000080"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textStyle="italic"
                android:textSize="14sp"
                android:textColor="#000000"
                android:text="@string/id"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="14sp"
                android:textColor="#000000"
                android:text="@string/description"/>

            <TextView
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textStyle="italic"
                android:textSize="14sp"
                android:textColor="#000000"
                android:text="@string/url"/>

            <TextView
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="14sp"
                android:textColor="#000000"
                android:text="@string/category"/>

            <TextView
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textStyle="italic"
                android:textSize="14sp"
                android:textColor="#000000"
                android:text="@string/language"/>

            <TextView
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="14sp"
                android:textColor="#000000"
                android:text="@string/country"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>