<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:tag="cards main container">

    <androidx.cardview.widget.CardView
        android:id="@+id/news"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#FFFFFF"
        android:clickable="true"
        android:focusable="true"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="1dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/urlToImage"
                android:contentDescription="@string/urlToImage"
                app:srcCompat="@drawable/ic_gb"
                android:autoMirrored="true"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:adjustViewBounds="true"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/title"
                android:textColor="#000080"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="14sp"
                android:textColor="#000000"
                android:text="@string/description"/>

            <TextView
                android:id="@+id/publishedAt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textStyle="italic"
                android:textSize="14sp"
                android:textColor="#000000"
                android:text="@string/publishedAt"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>